--- a/TempleRuins/proj.win32/TempleRuins.vcxproj.filters
+++ b/TempleRuins/proj.win32/TempleRuins.vcxproj.filters
@@ -60,6 +60,7 @@
     <ClCompile Include="..\Classes\SneakyButton.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Diamond.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -110,6 +111,7 @@
     <ClInclude Include="..\Classes\SneakyButton.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\Diamond.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
