--- a/.gitignore
+++ b/.gitignore
@@ -523,3 +523,5 @@ proj.linux/
 Debug.win32/
 TempleRuins/.cocos-project.json
 TempleRuins/CMakeLists.txt
+TempleRuins/proj.win32/
+TempleRuins/proj.android/
