--- a/TempleRuins/proj.win32/TempleRuins.vcxproj.filters
+++ b/TempleRuins/proj.win32/TempleRuins.vcxproj.filters
@@ -32,10 +32,16 @@
     <ClCompile Include="..\Classes\MainMenu.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\SettingScene.cpp">
+    <ClCompile Include="..\Classes\LoadingLogo.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\Classes\LoadingLogo.cpp">
+    <ClCompile Include="..\Classes\GameOver.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\MapGame.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Classes\ControlMusic.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -60,10 +66,16 @@
     <ClInclude Include="..\Classes\MainMenu.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\SettingScene.h">
+    <ClInclude Include="..\Classes\LoadingLogo.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\Classes\LoadingLogo.h">
+    <ClInclude Include="..\Classes\GameOver.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\MapGame.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\ControlMusic.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
