--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/c++,cocos2dx,visualstudio
 # Edit at https://www.gitignore.io/?templates=c++,cocos2dx,visualstudio
 
@@ -515,3 +514,12 @@ healthchecksdb
 MigrationBackup/
 
 # End of https://www.gitignore.io/api/c++,cocos2dx,visualstudio
+# ignore folder cocos2dx
+bin/
+cocos2d/
+proj.ios_mac/
+proj.linux/
+Debug.win32/
+TempleRuins/.cocos-project.json
+TempleRuins/CMakeLists.txt
+TempleRuins/proj.android/
