--- a/TempleRuins/Resources/Fire/fire.plist
+++ b/TempleRuins/Resources/Fire/fire.plist
@@ -4,67 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>1.jpg</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{804,830}</string>
-                <key>spriteSourceSize</key>
-                <string>{804,830}</string>
-                <key>textureRect</key>
-                <string>{{732,1258},{804,830}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>10.jpg</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{723,629}</string>
-                <key>spriteSourceSize</key>
-                <string>{723,629}</string>
-                <key>textureRect</key>
-                <string>{{723,629},{723,629}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>11.jpg</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{732,720}</string>
-                <key>spriteSourceSize</key>
-                <string>{732,720}</string>
-                <key>textureRect</key>
-                <string>{{0,1258},{732,720}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>2.jpg</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{723,629}</string>
-                <key>spriteSourceSize</key>
-                <string>{723,629}</string>
-                <key>textureRect</key>
-                <string>{{2169,629},{723,629}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>3.jpg</key>
+            <key>fire1.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -79,22 +19,37 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>4.jpg</key>
+            <key>fire10.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{723,629}</string>
+                <string>{848,785}</string>
                 <key>spriteSourceSize</key>
-                <string>{723,629}</string>
+                <string>{848,785}</string>
                 <key>textureRect</key>
-                <string>{{0,629},{723,629}}</string>
+                <string>{{732,1258},{848,785}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>5.jpg</key>
+            <key>fire11.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{804,830}</string>
+                <key>spriteSourceSize</key>
+                <string>{804,830}</string>
+                <key>textureRect</key>
+                <string>{{1580,1258},{804,830}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fire2.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -109,22 +64,7 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>6.jpg</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{0,0}</string>
-                <key>spriteSize</key>
-                <string>{723,629}</string>
-                <key>spriteSourceSize</key>
-                <string>{723,629}</string>
-                <key>textureRect</key>
-                <string>{{2169,0},{723,629}}</string>
-                <key>textureRotated</key>
-                <false/>
-            </dict>
-            <key>7.jpg</key>
+            <key>fire3.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -139,22 +79,52 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>8.jpg</key>
+            <key>fire4.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{848,785}</string>
+                <string>{723,629}</string>
                 <key>spriteSourceSize</key>
-                <string>{848,785}</string>
+                <string>{723,629}</string>
                 <key>textureRect</key>
-                <string>{{1536,1258},{848,785}}</string>
+                <string>{{2169,0},{723,629}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>9.jpg</key>
+            <key>fire5.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{723,629}</string>
+                <key>spriteSourceSize</key>
+                <string>{723,629}</string>
+                <key>textureRect</key>
+                <string>{{0,629},{723,629}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fire6.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{723,629}</string>
+                <key>spriteSourceSize</key>
+                <string>{723,629}</string>
+                <key>textureRect</key>
+                <string>{{723,629},{723,629}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fire7.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
@@ -169,6 +139,36 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
+            <key>fire8.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{723,629}</string>
+                <key>spriteSourceSize</key>
+                <string>{723,629}</string>
+                <key>textureRect</key>
+                <string>{{2169,629},{723,629}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>fire9.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{732,720}</string>
+                <key>spriteSourceSize</key>
+                <string>{732,720}</string>
+                <key>textureRect</key>
+                <string>{{0,1258},{732,720}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -179,13 +179,13 @@
             <key>premultiplyAlpha</key>
             <false/>
             <key>realTextureFileName</key>
-            <string>Side.png</string>
+            <string>fire.png</string>
             <key>size</key>
             <string>{2892,2088}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:b150ab9e1f686460baa959c52328944c:e59ea793650c81221aa1f44c991a3353:682efc7474b65d5d4866d1e61cb2fb15$</string>
+            <string>$TexturePacker:SmartUpdate:6fe88ebe0f6196232271481f415c1130:9c8b9f32aa91370e8e1171dff1ad21ec:0bb5bce7cb5efcf05dfe712e64a0ca66$</string>
             <key>textureFileName</key>
-            <string>Side.png</string>
+            <string>fire.png</string>
         </dict>
     </dict>
 </plist>
